<resources>
    <string name="app_name">Vacina Campina</string>
    <string name="slide_vacina">Tenha todas as informações sobre as vacinas e sua importância.</string>
    <string name="vacina">vacina</string>
    <string name="slide_familia">Tenha o controle das vacinas de toda sua família na palma da mão..</string>
    <string name="maps">maps</string>
    <string name="slide_maps">Encontre pontos de vacinação, por toda cidade.</string>
    <string name="titulo_slider_cadastro">Crie uma conta é gratuito!</string>
    <string name="descricao_slider_cadastro">Junte-se a várias pessoas que entendem a importância da vacinação.</string>
    <string name="button_cadastro">Cadastre-se</string>
    <string name="textView_ja_tenho_conta">Já Tenho Conta</string>
    <string name="crie_sua_conta">Crie sua conta é grátis.</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="nome">Nome</string>
    <string name="button_cadastrar">cadastrar</string>
    <string name="entrar_desc">Digite seus dados para entrar.</string>
    <string name="button_entrar">Entrar</string>
    <string name="não_tem_conta">Não tem conta? Cadastre-se!</string>
    <string name="sucesso_cadastro">Sucesso ao ser cadastrado, Um e-mail de verificação foi enviado para : </string>
    <string name="image_ok">sucesso</string>
    <string name="title_activity_tela_principal">TelaPrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="esqueceu_sua_senha">Esqueceu sua senha?</string>
    <string name="texto_recuperar_senha">Digite seu e-mail e clique em recuperar senha para receber um e-mail de recuperação.</string>
    <string name="button_recuperar_senha">Recuperar Senha</string>
    <string name="retornar_ao_login">Retornar ao Login</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="cartao_vacina">Cartão</string>
    <string name="vacinas">Vacinas</string>
    <string name="postos">Postos</string>
    <string name="conta">Conta</string>
    <string name="editar_dados">Editar Dados</string>
    <string name="sobre">Sobre</string>
    <string name="sair">Sair</string>
    <string name="ok">ok</string>
    <string name="mensagem_sobre">Aplicatico desenvolvido por Emerson Sousa Pereira, aluno do curso de Ciências da Computação da Universidade Estadua da Paraíba (UEPB), como trabalho de conclusão de curso.</string>


    <!--    Trazer todas as mensagens do sistema para ca-->
    <string name="erro_upload_Image">Falha ao carregar imagem.</string>
    <string name="erro_carregar_dados">Falha ao carregar Dados, Tente Novamente.</string>
    <string name="sucesso_upload_Image">Imagem carregada cmo sucesso.</string>
    <string name="sucesso_atualizar_dados">Dados atualizados com sucesso.</string>
    <string name="enviado_email_verificacao">Enviando E-mailde verificação.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="opcao">Opção</string>
    <string name="salvar">salvar</string>
    <string name="alterar_foto">Alterar foto</string>
    <string name="o_que_previne">O que previne:</string>
    <string name="do_que_feita">Do que é feita:</string>
    <string name="indica_o">Indicação:</string>
    <string name="esquemas_de_doses">Esquemas de doses:</string>
    <string name="via_de_aplica_o">Via de aplicação:</string>
    <string name="cuidados_antes_durante_e_ap_s_a_vacina_o">Cuidados antes, durante e após a vacinação:</string>
    <string name="efeitos_e_eventos_adversos">Efeitos e eventos adversos:</string>
    <string name="parentesco">Parentesco</string>
    <string name="parentes">Parentes</string>
    <string name="add_parente">+</string>
    <string name="acao">Escolha uma ação</string>
    <string name="remover_parente_msg">Tem certeza que deseja remover esse parente da sua lista?</string>
    <string name="sim">Sim</string>
    <string name="cancelar">Cancelar</string>
    <string name="dose_1">1° Dose :</string>
    <string name="dose_2">2° Dose :</string>
    <string name="dose_3">3° Dose :</string>
    <string name="status_vacina">imagem do status da dose</string>
    <string name="data">dd/mm/aaaa</string>
    <string name="parentes_vazio">Nenhum parente por enquanto : (</string>

    <string-array name="lista_parentes">
        <item>Grau de Parentesco</item>
        <item>Filho</item>
        <item>Marido</item>
        <item>Esposa</item>
        <item>Pai</item>
        <item>Mãe</item>
        <item>Irmão</item>
        <item>Avó</item>
        <item>Avô</item>
        <item>Neto</item>
        <item>Sobrinho</item>
    </string-array>
    <string-array name="lista_acoes">
        <item>Editar</item>
        <item>Excluir</item>

    </string-array>
</resources>
