<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titulo_slider_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="95dp"
        android:layout_marginBottom="48dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/titulo_slider_cadastro"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/descricao_slider_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/descricao_slider_cadastro"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="65dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/descricao_slider_cadastro"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_cadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_slider_cadastro" />

    <Button
        android:id="@+id/button_cadastro"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/round_button"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="btnCadastrar"
        android:text="@string/button_cadastro"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView_ja_tenho_conta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descricao_slider_cadastro" />

    <TextView
        android:id="@+id/textView_ja_tenho_conta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="264dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:onClick="btnEntrar"
        android:text="@string/textView_ja_tenho_conta"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_cadastro" />
</androidx.constraintlayout.widget.ConstraintLayout>