<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.VacinaDetalheActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_nome_vacina_cartao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="@string/o_que_previne"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <br.com.vacinacampina.util.JustifiedTextView
                android:id="@+id/textView_previne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:textColor="@color/cor_texto"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="@string/do_que_feita"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <br.com.vacinacampina.util.JustifiedTextView
                android:id="@+id/textView_composicao"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:textAlignment="viewStart"
                android:textColor="@color/cor_texto"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="@string/indica_o"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <br.com.vacinacampina.util.JustifiedTextView
                android:id="@+id/textView_indicacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:textColor="@color/cor_texto"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="@string/esquemas_de_doses"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <br.com.vacinacampina.util.JustifiedTextView
                android:id="@+id/textView_doses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:textColor="@color/cor_texto"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="@string/via_de_aplica_o"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <br.com.vacinacampina.util.JustifiedTextView
                android:id="@+id/textView_aplicacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:textColor="@color/cor_texto"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="@string/cuidados_antes_durante_e_ap_s_a_vacina_o"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <br.com.vacinacampina.util.JustifiedTextView
                android:id="@+id/textView_cuidados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:textColor="@color/cor_texto"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:text="@string/efeitos_e_eventos_adversos"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <br.com.vacinacampina.util.JustifiedTextView
                android:id="@+id/textView_efeitos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:fontFamily="sans-serif-condensed-medium"
                android:padding="10dp"
                android:textColor="@color/cor_texto"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>