<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    tools:context=".activity.login.RecuperarSenhaActivity">


    <TextView
        android:id="@+id/textView_recuperar_senha"
        android:layout_width="0dp"
        android:layout_height="66dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/texto_recuperar_senha"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_email_recuperar_senha"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:autofillHints="email"
        android:drawableLeft="@drawable/ic_email_white_24dp"
        android:drawablePadding="@dimen/drawable_padding"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_recuperar_senha" />

    <Button
        android:id="@+id/button_recuperar_senha"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_button"
        android:text="@string/button_recuperar_senha"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_email_recuperar_senha" />

    <ProgressBar
        android:id="@+id/progressBar_recuperar_senha"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="200dp"
        android:translationZ="1000dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_voltar_login"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/retornar_ao_login"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/floatingActionButton_retornar_login"
        app:layout_constraintTop_toBottomOf="@+id/button_recuperar_senha" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton_retornar_login"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="32dp"
        android:clickable="true"
        android:visibility="invisible"
        app:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_recuperar_senha"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</androidx.constraintlayout.widget.ConstraintLayout>