<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditarContaActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image_editar"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/profile"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_alterar_foto"
        android:layout_width="93dp"
        android:layout_height="24dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/round_button"
        android:text="@string/alterar_foto"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/white"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="@+id/profile_image_editar"
        app:layout_constraintStart_toStartOf="@+id/profile_image_editar"
        app:layout_constraintTop_toBottomOf="@+id/profile_image_editar" />

    <EditText
        android:id="@+id/editText_nome_editar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="32dp"
        android:width="320dp"
        android:autofillHints="name"
        android:drawableLeft="@drawable/ic_person_black_24dp"
        android:drawablePadding="@dimen/drawable_padding"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_alterar_foto" />

    <Button
        android:id="@+id/button_salvar_edicao"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/round_button"
        android:text="@string/salvar"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_nome_editar" />

    <ProgressBar
        android:id="@+id/progressBar_editar"
        style="?android:attr/progressBarStyle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="150dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="200dp"
        android:translationZ="1000dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar_carregar_foto_2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/profile_image_editar"
        app:layout_constraintEnd_toEndOf="@+id/profile_image_editar"
        app:layout_constraintStart_toStartOf="@+id/profile_image_editar"
        app:layout_constraintTop_toTopOf="@+id/profile_image_editar" />

</androidx.constraintlayout.widget.ConstraintLayout>